@@ -2,10 +2,18 @@ $('#new-sticky-or-group-dialog').dialog('close');
 $('#sticky_description').val('');
 $('.field_with_errors').each( function() { $(this).removeClass('field_with_errors');});
 <% unless @sticky.due_date.blank? %>
-  $("#day_<%= @sticky.due_date.strftime('%Y%m%d') %>").append("<%= @tags = @sticky.tags; escape_javascript(render("tags/small_tags")) %>")
-  $("#day_<%= @sticky.due_date.strftime('%Y%m%d') %>").append("<%= escape_javascript(render("stickies/popup")) %>");
-  $("#day_<%= @sticky.due_date.strftime('%Y%m%d') %>").effect("highlight", {}, 3000);
+
+var tag_container = $("#day_<%= @sticky.due_date.strftime('%m_%d_%Y') %>_tag_container_<%= @sticky.tag_ids.sort.join('_') %>");
+
+if(tag_container.length > 0){
+  $(tag_container).append("<%= escape_javascript(render("stickies/popup")) %>")
+}else{
+  $("#day_<%= @sticky.due_date.strftime('%m_%d_%Y') %>").append("<div style='padding-bottom:5px' id='day_<%= @sticky.due_date.strftime('%m_%d_%Y') %>_tag_container_<%= @sticky.tag_ids.sort.join('_') %>'><%= @tags = @sticky.tags; escape_javascript(render("tags/small_tags")) %><%= escape_javascript(render("stickies/popup")) %></div>")
+}
+
+  $("#day_<%= @sticky.due_date.strftime('%m_%d_%Y') %>").effect("highlight", {}, 3000);
 <% end %>
+$(".project_<%= @sticky.project.id %>_color").css('color', '<%= @sticky.project.color(current_user) %>');
 
 
 // Following copied from calendar.js.erb
@@ -39,4 +47,5 @@ $(".sticky_popup").each( function(index, element) {
       classes: 'ui-tooltip-shadow ui-tooltip-yellow'
     }
   });
+  $(element).draggable({ revert: 'invalid', helper: "clone" });
 });
